--- a/overrides/home.html
+++ b/overrides/home.html
@@ -64,7 +64,7 @@
       </div>
     </div>
   </div>
-  <div class="about-container">
+  <!-- <div class="about-container">
     <p>
       Há 15 anos, a Idea Technology se especializa em extrair inteligência de negócios a partir de dados.
     </p>
@@ -74,6 +74,6 @@
     <p>
       Recentemente, criamos um conjunto de três relatórios financeiros que oferecem uma nova facilidade de acesso e compreensão para empresas que utilizam o SAP Business One.
     </p>
-  </div>
+  </div> -->
 </div>
 {% endblock %}
