docs: adiciona layout e about me

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -64,16 +64,18 @@
       </div>
     </div>
   </div>
-  <!-- <div class="about-container">
-    <p>
-      Há 15 anos, a Idea Technology se especializa em extrair inteligência de negócios a partir de dados.
-    </p>
-    <p>
-      Desenvolvemos soluções corporativas que controlam e entregam informações estratégicas, permitindo uma tomada de decisão ágil por meio de relatórios personalizados. Como Parceiros Microsoft, utilizamos a ferramenta Power BI para visualizar esses relatórios de forma dinâmica e eficiente.
-    </p>
-    <p>
-      Recentemente, criamos um conjunto de três relatórios financeiros que oferecem uma nova facilidade de acesso e compreensão para empresas que utilizam o SAP Business One.
-    </p>
-  </div> -->
+  <div class="about-container">
+    <div class="about-text">
+        <p> 
+          Há <strong style="color: var(--color-yellow);">15 anos</strong>, a Idea Technology se especializa em extrair inteligência de negócios a partir de dados.
+        </p>
+        <p>
+          Desenvolvemos soluções corporativas que controlam e entregam informações estratégicas, permitindo uma tomada de decisão ágil por meio de relatórios personalizados. Como Parceiros Microsoft, utilizamos a ferramenta Power BI para visualizar esses relatórios de forma dinâmica e eficiente.
+        </p>
+        <p>
+          Recentemente, criamos um conjunto de <strong style="color: var(--color-yellow);">três relatórios</strong> financeiros que oferecem uma nova facilidade de acesso e compreensão para empresas que utilizam o SAP Business One.
+        </p>
+    </div>
+  </div>
 </div>
 {% endblock %}
