--- a/overrides/home.html
+++ b/overrides/home.html
@@ -60,7 +60,7 @@
         </check-list>
       </div>
       <div class="center-button">
-        <button href="#" class="btn-saiba-mais">Sabia Mais</button>
+        <button href="#" class="btn-saiba-mais">Saiba Mais</button>
       </div>
     </div>
   </div>
