docs: altera animação checklist

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -39,19 +39,19 @@
             <ul class="contains-task-list">
               <li class="task-list-item">
                 <label>
-                  <input type="checkbox" checked />
+                  <input type="checkbox" />
                   <span>Contabilidade</span>
                 </label>
               </li>
               <li class="task-list-item">
                 <label>
-                  <input type="checkbox" checked />
+                  <input type="checkbox" />
                   <span>Financeiro</span>
                 </label>
               </li>
               <li class="task-list-item">
                 <label>
-                  <input type="checkbox" checked />
+                  <input type="checkbox" />
                   <span>Faturamento</span>
                 </label>
               </li>
