docs: ajustes visuais

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div class="title-container">
-      <h1>IDEA FINANCE</h1>
+      <h1>IDEA BUSINESS ANALYTICS</h1>
       <h2>
         Três Relatórios <span>Financeiros</span> para suprir todas as suas
         necessidades.
