--- a/overrides/home.html
+++ b/overrides/home.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %} {% block styles %} {{ super() }}
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <style>
-  /** Custom CSS goes here **/
+
 </style>
 {% endblock %} {% block content %}
 <div class="main-container">
@@ -14,10 +15,7 @@
           <img src="./assets/fat.png" style="width: 100%" />
         </div>
         <div class="mySlides fade">
-          <img
-            src="./assets/fin.png"
-            style="width: 100%"
-          />
+          <img src="./assets/fin.png" style="width: 100%" />
         </div>
       </div>
       <br />
@@ -34,30 +32,43 @@
         necessidades.
       </h2>
       <div class="checklist">
-        <check-list data-key="default">
-          <div class="checklist">
-            <ul class="contains-task-list">
-              <li class="task-list-item">
-                <label>
-                  <input type="checkbox" />
-                  <span>Contabilidade</span>
-                </label>
-              </li>
-              <li class="task-list-item">
-                <label>
-                  <input type="checkbox" />
-                  <span>Financeiro</span>
-                </label>
-              </li>
-              <li class="task-list-item">
-                <label>
-                  <input type="checkbox" />
-                  <span>Faturamento</span>
-                </label>
-              </li>
-            </ul>
-          </div>
-        </check-list>
+        <ul class="ul-checklist">
+          <li>
+              <span>Contabilidade</span>
+          </li>
+          <li>
+              <div style="display: flex; align-items: center">
+                <span>Idea Finance</span>
+                <a
+                  href="financeiro/ficha-tecnica"
+                  style="display: flex; align-items: center"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    fill="currentColor"
+                    class="bi bi-arrow-right"
+                    viewBox="0 0 16 16"
+                    style="margin-left: 5px"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"
+                    />
+                  </svg>
+                </a>
+              </div>
+          </li>
+          <li class="task-list-item">
+              <div style="display: flex; align-items: center">
+                <span>Faturamento</span>
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16" style="margin-left: 5px;">
+                      <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
+                    </svg> -->
+              </div>
+          </li>
+        </ul>
       </div>
       <div class="center-button">
         <button href="#" class="btn-saiba-mais">Saiba Mais</button>
@@ -66,15 +77,24 @@
   </div>
   <div class="about-container">
     <div class="about-text">
-        <p> 
-          Há <strong style="color: var(--color-yellow);">15 anos</strong>, a Idea Technology se especializa em extrair inteligência de negócios a partir de dados.
-        </p>
-        <p>
-          Desenvolvemos soluções corporativas que controlam e entregam informações estratégicas, permitindo uma tomada de decisão ágil por meio de relatórios personalizados. Como Parceiros Microsoft, utilizamos a ferramenta Power BI para visualizar esses relatórios de forma dinâmica e eficiente.
-        </p>
-        <p>
-          Recentemente, criamos um conjunto de <strong style="color: var(--color-yellow);">três relatórios</strong> financeiros que oferecem uma nova facilidade de acesso e compreensão para empresas que utilizam o SAP Business One.
-        </p>
+      <p>
+        Há <strong style="color: var(--color-yellow)">15 anos</strong>, a Idea
+        Technology se especializa em extrair inteligência de negócios a partir
+        de dados.
+      </p>
+      <p>
+        Desenvolvemos soluções corporativas que controlam e entregam informações
+        estratégicas, permitindo uma tomada de decisão ágil por meio de
+        relatórios personalizados. Como Parceiros Microsoft, utilizamos a
+        ferramenta Power BI para visualizar esses relatórios de forma dinâmica e
+        eficiente.
+      </p>
+      <p>
+        Recentemente, criamos um conjunto de
+        <strong style="color: var(--color-yellow)">três relatórios</strong>
+        financeiros que oferecem uma nova facilidade de acesso e compreensão
+        para empresas que utilizam o SAP Business One.
+      </p>
     </div>
   </div>
 </div>
