--- a/overrides/home.html
+++ b/overrides/home.html
@@ -3,13 +3,14 @@
 <style>
 
 </style>
+
 {% endblock %} {% block content %}
 <div class="main-container">
   <div class="header-container">
     <div class="carrousel">
       <div class="slideshow-container">
         <div class="mySlides fade" style="display: block">
-          <img src="./assets/contab.png" style="width: 100%" />
+          <img src="./assets/contab.png" style="width: 100% " />
         </div>
         <div class="mySlides fade">
           <img src="./assets/fat.png" style="width: 100%" />
@@ -26,15 +27,15 @@
       </div>
     </div>
     <div class="title-container">
-      <h1>IDEA BUSINESS ANALYTICS</h1>
+      <h1>IDEA ANALYTICS</h1>
       <h2>
-        Três Relatórios <span>Financeiros</span> para suprir todas as suas
+        Três Relatórios <strong style="color: var(--color-yellow)">Financeiros</strong> para suprir todas as suas
         necessidades.
       </h2>
       <div class="checklist">
         <ul class="ul-checklist">
           <li>
-              <span>Contabilidade</span>
+              <span>Idea Account</span>
               <a
               href="contabilidade/ficha-tecnica"
               style="display: flex; align-items: center"
@@ -81,7 +82,7 @@
           </li>
           <li class="task-list-item">
               <div style="display: flex; align-items: center">
-                <span>Faturamento</span>
+                <span>Idea Sales</span>
                 <a
                 href="faturamento/ficha-tecnica"
                 style="display: flex; align-items: center"
@@ -110,8 +111,8 @@
       </div>
     </div>
   </div>
-  <div class="about-container">
-    <div class="about-text">
+  <div class="carrousel">
+  <div class="about-text" style="flex: 1; text-align: justify;">
       <p>
         Há <strong style="color: var(--color-yellow)">15 anos</strong>, a Idea
         Technology se especializa em extrair inteligência de negócios a partir
