--- a/overrides/home.html
+++ b/overrides/home.html
@@ -33,76 +33,42 @@
         necessidades.
       </h2>
       <div class="checklist">
-        <ul class="ul-checklist">
+        <ul class="text">
           <li>
-              <span>Idea Account</span>
-              <a
-              href="contabilidade/ficha-tecnica"
-              style="display: flex; align-items: center"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                fill="currentColor"
-                class="bi bi-arrow-right"
-                viewBox="0 0 16 16"
-                style="margin-left: 5px"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"
-                />
+            <div style="display: flex; align-items: center">
+            <span>Idea Account</span>
+            <a href="contabilidade/ficha-tecnica" style="display: flex; align-items: center">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-arrow-right" viewBox="0 0 16 16" style="margin-left: 5px">
+                <path fill-rule="evenodd"
+                  d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
               </svg>
             </a>
+          </div>
           </li>
           <li>
-              <div style="display: flex; align-items: center">
-                <span>Idea Finance</span>
-                <a
-                  href="financeiro/ficha-tecnica"
-                  style="display: flex; align-items: center"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="16"
-                    height="16"
-                    fill="currentColor"
-                    class="bi bi-arrow-right"
-                    viewBox="0 0 16 16"
-                    style="margin-left: 5px"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"
-                    />
-                  </svg>
-                </a>
-              </div>
-          </li>
-          <li class="task-list-item">
-              <div style="display: flex; align-items: center">
-                <span>Idea Sales</span>
-                <a
-                href="faturamento/ficha-tecnica"
-                style="display: flex; align-items: center"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="16"
-                  height="16"
-                  fill="currentColor"
-                  class="bi bi-arrow-right"
-                  viewBox="0 0 16 16"
-                  style="margin-left: 5px"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"
-                  />
+            <div style="display: flex; align-items: center">
+              <span>Idea Finance</span>
+              <a href="financeiro/ficha-tecnica" style="display: flex; align-items: center">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-arrow-right" viewBox="0 0 16 16" style="margin-left: 5px">
+                  <path fill-rule="evenodd"
+                    d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
                 </svg>
               </a>
-              </div>
+            </div>
+          </li>
+          <li class="task-list-item">
+            <div style="display: flex; align-items: center">
+              <span>Idea Sales</span>
+              <a href="faturamento/ficha-tecnica" style="display: flex; align-items: center">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-arrow-right" viewBox="0 0 16 16" style="margin-left: 5px">
+                  <path fill-rule="evenodd"
+                    d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
+                </svg>
+              </a>
+            </div>
           </li>
         </ul>
       </div>
@@ -112,7 +78,7 @@
     </div>
   </div>
   <div class="carrousel">
-  <div class="about-text" style="flex: 1; text-align: justify;">
+    <div class="about-text" style="flex: 1; text-align: justify;">
       <p>
         Há <strong style="color: var(--color-yellow)">15 anos</strong>, a Idea
         Technology se especializa em extrair inteligência de negócios a partir
