--- a/overrides/home.html
+++ b/overrides/home.html
@@ -36,7 +36,7 @@
         <ul class="text">
           <li>
             <div style="display: flex; align-items: center">
-            <span>Idea Account</span>
+              <a href="contabilidade/ficha-tecnica">Idea Account</a>
             <a href="contabilidade/ficha-tecnica" style="display: flex; align-items: center">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                 class="bi bi-arrow-right" viewBox="0 0 16 16" style="margin-left: 5px">
@@ -48,7 +48,7 @@
           </li>
           <li>
             <div style="display: flex; align-items: center">
-              <span>Idea Finance</span>
+              <a href="financeiro/ficha-tecnica">Idea Finance</a>
               <a href="financeiro/ficha-tecnica" style="display: flex; align-items: center">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                   class="bi bi-arrow-right" viewBox="0 0 16 16" style="margin-left: 5px">
@@ -60,7 +60,7 @@
           </li>
           <li class="task-list-item">
             <div style="display: flex; align-items: center">
-              <span>Idea Sales</span>
+              <a href="faturamento/ficha-tecnica">Idea Sales</a>
               <a href="faturamento/ficha-tecnica" style="display: flex; align-items: center">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                   class="bi bi-arrow-right" viewBox="0 0 16 16" style="margin-left: 5px">
