--- a/overrides/home.html
+++ b/overrides/home.html
@@ -33,11 +33,11 @@
         necessidades.
       </h2>
       <div class="checklist">
-        <ul class="text">
+        <ul class="ul-checklist">
           <li>
             <div style="display: flex; align-items: center">
               <a href="contabilidade/ficha-tecnica">Idea Account</a>
-            <a href="contabilidade/ficha-tecnica" style="display: flex; align-items: center">
+            <a href="contabilidade/ficha-tecnica" style="display: flex">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                 class="bi bi-arrow-right" viewBox="0 0 16 16" style="margin-left: 5px">
                 <path fill-rule="evenodd"
@@ -49,7 +49,7 @@
           <li>
             <div style="display: flex; align-items: center">
               <a href="financeiro/ficha-tecnica">Idea Finance</a>
-              <a href="financeiro/ficha-tecnica" style="display: flex; align-items: center">
+              <a href="financeiro/ficha-tecnica" style="display: flex">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                   class="bi bi-arrow-right" viewBox="0 0 16 16" style="margin-left: 5px">
                   <path fill-rule="evenodd"
@@ -61,7 +61,7 @@
           <li class="task-list-item">
             <div style="display: flex; align-items: center">
               <a href="faturamento/ficha-tecnica">Idea Sales</a>
-              <a href="faturamento/ficha-tecnica" style="display: flex; align-items: center">
+              <a href="faturamento/ficha-tecnica" style="display: flex">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                   class="bi bi-arrow-right" viewBox="0 0 16 16" style="margin-left: 5px">
                   <path fill-rule="evenodd"
