--- a/overrides/home.html
+++ b/overrides/home.html
@@ -36,7 +36,7 @@
         <ul class="ul-checklist">
           <li>
             <div style="display: flex; align-items: center">
-              <a href="contabilidade/ficha-tecnica">Idea Account</a>
+              <a href="contabilidade/ficha-tecnica">Idea Accounting</a>
             <a href="contabilidade/ficha-tecnica" style="display: flex">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                 class="bi bi-arrow-right" viewBox="0 0 16 16" style="margin-left: 5px">
