docs: ajusta home

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -28,77 +28,14 @@
     </div>
     <div class="title-container">
       <h1>IDEA ANALYTICS</h1>
-      <h2>
-        Três Relatórios <strong style="color: var(--color-yellow)">Financeiros</strong> para suprir todas as suas
-        necessidades.
-      </h2>
-      <div class="checklist">
-        <ul class="ul-checklist">
-          <li>
-            <div style="display: flex; align-items: center">
-              <a href="contabilidade/ficha-tecnica">Idea Accounting</a>
-            <a href="contabilidade/ficha-tecnica" style="display: flex">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                class="bi bi-arrow-right" viewBox="0 0 16 16" style="margin-left: 5px">
-                <path fill-rule="evenodd"
-                  d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
-              </svg>
-            </a>
-          </div>
-          </li>
-          <li>
-            <div style="display: flex; align-items: center">
-              <a href="financeiro/ficha-tecnica">Idea Finance</a>
-              <a href="financeiro/ficha-tecnica" style="display: flex">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                  class="bi bi-arrow-right" viewBox="0 0 16 16" style="margin-left: 5px">
-                  <path fill-rule="evenodd"
-                    d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
-                </svg>
-              </a>
-            </div>
-          </li>
-          <li class="task-list-item">
-            <div style="display: flex; align-items: center">
-              <a href="faturamento/ficha-tecnica">Idea Sales</a>
-              <a href="faturamento/ficha-tecnica" style="display: flex">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                  class="bi bi-arrow-right" viewBox="0 0 16 16" style="margin-left: 5px">
-                  <path fill-rule="evenodd"
-                    d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
-                </svg>
-              </a>
-            </div>
-          </li>
-        </ul>
-      </div>
-      <div class="center-button">
-        <button href="#" class="btn-saiba-mais">Saiba Mais</button>
-      </div>
+      <p>O Idea Analytics são Dashboards feitos em Power BI para o SAP B1 Hana, que ajudará você a analisar com eficiência os indicadores de Vendas, Finanças e Contabilidade da sua empresa. Eles estão divididos em:</p>
+      <h2>Idea Sales</h2>
+      <p>BI de Vendas: criado para facilitar e dar agilidade com o monitoramento de metas, resultados, margem lucro, produtos mais vendidos, e muitos outros indicadores.</p>
+      <h2>Idea Finance</h2>
+      <p>BI Financeiro: facilita a análise de desempenho financeiro, identifica tendências, monitora KPIs e ajuda na previsão e planejamento orçamentário, otimizando a saúde financeira da empresa. </p>
+      <h2>Idea Accounting</h2>
+      <p>BI Contábil: auxilia na auditoria, conformidade regulatória, gestão de balanços e demonstrações financeiras, além de suportar a tomada de decisões estratégicas com base em indicadores e informações contábeis detalhadas e confiáveis.</p>
     </div>
   </div>
-  <div class="carrousel">
-    <div class="about-text" style="flex: 1; text-align: justify;">
-      <p>
-        Há <strong style="color: var(--color-yellow)">15 anos</strong>, a Idea
-        Technology se especializa em extrair inteligência de negócios a partir
-        de dados.
-      </p>
-      <p>
-        Desenvolvemos soluções corporativas que controlam e entregam informações
-        estratégicas, permitindo uma tomada de decisão ágil por meio de
-        relatórios personalizados. Como Parceiros Microsoft, utilizamos a
-        ferramenta Power BI para visualizar esses relatórios de forma dinâmica e
-        eficiente.
-      </p>
-      <p>
-        Recentemente, criamos um conjunto de
-        <strong style="color: var(--color-yellow)">três relatórios</strong>
-        financeiros que oferecem uma nova facilidade de acesso e compreensão
-        para empresas que utilizam o SAP Business One.
-      </p>
-    </div>
-  </div>
-
 </div>
 {% endblock %}
