docs: ajusta link home

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -29,11 +29,17 @@
     <div class="title-container">
       <h1>IDEA ANALYTICS</h1>
       <p>O Idea Analytics são Dashboards feitos em Power BI para o SAP B1 Hana, que ajudará você a analisar com eficiência os indicadores de Vendas, Finanças e Contabilidade da sua empresa. Eles estão divididos em:</p>
-      <h2>Idea Sales</h2>
+      <a href="./faturamento/ficha-tecnica">
+        <h2>Idea Sales</h2>
+      </a>
       <p>BI de Vendas: criado para facilitar e dar agilidade com o monitoramento de metas, resultados, margem lucro, produtos mais vendidos, e muitos outros indicadores.</p>
-      <h2>Idea Finance</h2>
+      <a href="./financeiro/ficha-tecnica">
+        <h2>Idea Finance</h2>
+      </a>
       <p>BI Financeiro: facilita a análise de desempenho financeiro, identifica tendências, monitora KPIs e ajuda na previsão e planejamento orçamentário, otimizando a saúde financeira da empresa. </p>
-      <h2>Idea Accounting</h2>
+      <a href="./contabilidade/ficha-tecnica">
+        <h2>Idea Accounting</h2>
+      </a>
       <p>BI Contábil: auxilia na auditoria, conformidade regulatória, gestão de balanços e demonstrações financeiras, além de suportar a tomada de decisões estratégicas com base em indicadores e informações contábeis detalhadas e confiáveis.</p>
     </div>
   </div>
