--- a/overrides/home.html
+++ b/overrides/home.html
@@ -16,7 +16,7 @@
           <img src="./assets/fat.png" style="width: 100%" />
         </div>
         <div class="mySlides fade">
-          <img src="./assets/fin.png" style="width: 100%" />
+          <img src="./assets/flux.png" style="width: 100%" />
         </div>
       </div>
       <br />
