fix: ajustes gramaticais

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -28,7 +28,7 @@
     </div>
     <div class="title-container">
       <h1>IDEA ANALYTICS</h1>
-      <p>O Idea Analytics são Dashboards feitos em Power BI para o SAP B1 Hana, que ajudará você a analisar com eficiência os indicadores de Vendas, Finanças e Contabilidade da sua empresa. Eles estão divididos em:</p>
+      <p>O Idea Analytics são Dashboards feitos em Power BI para o SAP B1 Hana, que ajudarão você a analisar com eficiência os indicadores de Vendas, Finanças e Contabilidade da sua empresa. Eles estão divididos em:</p>
       <a href="./faturamento/ficha_tecnica">
         <h2>Idea Sales</h2>
       </a>
