fix: ajusta link do BI

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -33,6 +33,7 @@
         <h2>Idea Sales</h2>
       </a>
       <p>BI de Vendas: criado para facilitar e dar agilidade com o monitoramento de metas, resultados, margem lucro, produtos mais vendidos, e muitos outros indicadores.</p>
+      <p>Veja nossa <a href="./faturamento/demo">Demonstração</a></p>
       <a href="./financeiro/ficha_tecnica">
         <h2>Idea Finance</h2>
       </a>
