fix: ajusta headers and home

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -33,7 +33,6 @@
         <h2>Idea Sales</h2>
       </a>
       <p>BI de Vendas: criado para facilitar e dar agilidade com o monitoramento de metas, resultados, margem lucro, produtos mais vendidos, e muitos outros indicadores.</p>
-      <p>Veja nossa <a href="./faturamento/demo">Demonstração</a></p>
       <a href="./financeiro/ficha_tecnica">
         <h2>Idea Finance</h2>
       </a>
@@ -42,6 +41,9 @@
         <h2>Idea Accounting</h2>
       </a>
       <p>BI Contábil: auxilia na auditoria, conformidade regulatória, gestão de balanços e demonstrações financeiras, além de suportar a tomada de decisões estratégicas com base em indicadores e informações contábeis detalhadas e confiáveis.</p>
+      <h4 style="text-align: center;">
+        Descubra todos os recursos em detalhes em nossa <a href="./financeiro/demo">Demonstração</a>
+      </h4>
     </div>
   </div>
 </div>
