--- a/overrides/home.html
+++ b/overrides/home.html
@@ -42,7 +42,7 @@
       </a>
       <p>BI Contábil: auxilia na auditoria, conformidade regulatória, gestão de balanços e demonstrações financeiras, além de suportar a tomada de decisões estratégicas com base em indicadores e informações contábeis detalhadas e confiáveis.</p>
       <h4 style="text-align: center;">
-        Descubra todos os recursos em detalhes em nossa <a href="./financeiro/demo">Demonstração</a>
+        Descubra todos os recursos em detalhes em nossa <a href="./intro/demo_intro">Demonstração</a>
       </h4>
     </div>
   </div>
