--- a/overrides/home.html
+++ b/overrides/home.html
@@ -26,7 +26,7 @@
         <span class="dot" onclick="currentSlide(3)"></span>
       </div>
     </div>
-    <div class="title-container">
+    <div class="title-container" style="margin-top: 20px;">
       <h1>IDEA ANALYTICS</h1>
       <p>O Idea Analytics são Dashboards feitos em Power BI para o SAP B1 Hana, que ajudarão você a analisar com eficiência os indicadores de Vendas, Finanças e Contabilidade da sua empresa. Eles estão divididos em:</p>
       <a href="./faturamento/ficha_tecnica">
