--- a/overrides/home.html
+++ b/overrides/home.html
@@ -10,13 +10,13 @@
     <div class="carrousel">
       <div class="slideshow-container">
         <div class="mySlides fade" style="display: block">
-          <img src="./assets/contab.png" style="width: 100% " />
+          <img src="./assets/con/con_home.png" style="width: 100% " />
         </div>
         <div class="mySlides fade">
-          <img src="./assets/fat.png" style="width: 100%" />
+          <img src="./assets/fat/fat.png" style="width: 100%" />
         </div>
         <div class="mySlides fade">
-          <img src="./assets/flux.png" style="width: 100%" />
+          <img src="./assets/flux/flux.png" style="width: 100%" />
         </div>
       </div>
       <br />
